--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# 0.9.1 #
+- don't delete already downloaded files (thanks to @xxx)
+
 # 0.9.0 #
 - prevent double-decode of url param (thanks to @xxx)
 - fixed inode overflow in tmp folder (thanks to @xxx)
